--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-<html><body>Hello World</body></html>
+<!DOCTYPE html>
+    <head>
+      <link href="style.css" rel="stylesheet" type="text/css">
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+
+      <meta charset="UTF-8">
+      <meta name="description" content="Compare mobile price plans based on your actual phone usage.">
+      <meta name="keywords" content="compare, mobile, operator, price plans">
+
+      <title>Compare mobile price plans with Comparific!</title>
+      <link rel="shortcut icon" href="images/favicon.ico" />
+
+      <!-- include jQuery library -->
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+      <!-- include Cycle plugin -->
+      <script type="text/javascript" src="scripts/jquery.cycle2.min.js"></script>
+
+      <script type="text/javascript">
+        $(document).ready(function() {
+            $('.slideshow').cycle({
+                fx: 'fade',
+	        containerResize: 0
+            });
+        });
+      </script>
+
+      <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	ga('create', 'UA-34254266-1', 'comparific.com');
+	ga('send', 'pageview');
+	
+      </script>
+
+      <noscript>
+        <style>.hide-script{display:none !important; }</style> <!--Hides if browser have JS disabled-->
+      </noscript>
+    </head>
+
+    <body>      
+      <div id="page">
+          <div id="bg-box"></div>
+          <div class="content">
+              <!--<div id="phone"></div>-->
+              <div class="slideshow phone hide-script">
+                <img src="images/1.png" alt="Screenshot 1"/>
+                <img src="images/2.png" alt="Screenshot 2"/>
+                <img src="images/3.png" alt="Screenshot 3"/>
+                <img src="images/4.png" alt="Screenshot 4"/>
+		<img src="images/5.png" alt="Screenshot 5"/>
+              </div>
+              <noscript>
+                <img src="images/phone_3.png" alt="Screenshot" class="phone"/>
+              </noscript>
+              <div id="presentation">
+                  <div id="title-logo">
+                      <img id="icon" alt="Comparific" src="images/comparific_icon.png"/>
+                      <img id="logo" alt="Comparific" src="images/comparific_logo.png"/>
+                  </div>
+                  <div id="content-box">
+                      <header>
+                         <h1>Take control of your<br>mobile communication</h1>
+                      </header>
+                      <div>
+                        <p>Comparific is a <b>smart</b> and <b>simple</b> way for you to save money and get more out of your mobile communication.</p>
+
+                        <p>Compare price plans from all operators based on your actual phone usage and see how you communicate with friends and family.</p>
+
+                        <p>And it's all free...</p>
+                      </div>
+                      <a id="download-button" href="https://play.google.com/store/apps/details?id=com.comparific.android">
+                        <img alt="Get it on Google Play"
+                             src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+                      </a>
+                  </div>   
+              </div>
+          </div>
+          <nav>
+          </nav>
+          <footer class="footer">
+              <p> Comparific AB |</p>
+              <address>
+                  <a href="mailto:info@comparific.com">info@comparific.com</a>
+              </address>
+          </footer>
+      </div>
+    </body>
+
+
+</html>
