--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
 
                         <p>And it's all free...</p>
                       </div>
-                      <a id="download-button" href="https://play.google.com/store/apps/details?id=com.comparific.android">
-                        <img alt="Get it on Google Play"
-                             src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-                      </a>
+                          <a href="https://play.google.com/store/apps/details?id=com.comparific.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1">
+                              <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge-border.png" />
+                          </a>
                   </div>   
               </div>
           </div>
