--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p>And it's all free...</p>
                       </div>
                           <a href="https://play.google.com/store/apps/details?id=com.comparific.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1">
-                              <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge-border.png" />
+                              <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge-border.png" style="width: 185px"/>
                           </a>
                   </div>   
               </div>
